--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "test": "mocha"
   },
   "author": "Alan Yan",
@@ -20,8 +20,9 @@
     "express-session": "^1.10.1",
     "gulp": "^3.8.11",
     "jade": "~1.9.2",
+    "jquery": "^2.1.4",
     "mocha": "~1.14.0",
-    "mongoose": "^3.9.7",
+    "mongoose": "^4.0.6",
     "morgan": "~1.5.3",
     "passport": "^0.2.1",
     "passport-facebook": "~1.0.2",
