--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^2.1.4",
     "mocha": "~1.14.0",
     "mongoose": "^4.0.6",
+    "mongoose-friends": "^0.2.3",
     "morgan": "~1.5.3",
     "passport": "^0.2.1",
     "passport-facebook": "~1.0.2",
