--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.0.6",
     "mongoose-friends": "^0.2.3",
     "morgan": "~1.5.3",
+    "multer": "^0.1.8",
     "passport": "^0.2.1",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
