updated to multer 1.x

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "mongoose-crate-s3": "^1.1.2",
     "mongoose-friends": "^0.2.3",
     "morgan": "~1.5.3",
-    "multer": "^0.1.8",
+    "multer": "^1.0.1",
+    "multer-s3": "^1.2.0",
     "passport": "^0.2.1",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
     "passport-twitter": "~1.0.2",
