--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "readig",
+  "name": "readigs",
   "version": "0.0.1",
   "main": "app.js",
   "private": true,
@@ -18,12 +18,11 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "express-session": "^1.10.1",
-    "fs": "0.0.2",
     "jade": "~1.9.2",
     "jquery": "^2.1.4",
     "moment": "^2.10.3",
     "moment-twitter": "^0.2.0",
-    "mongoose": "^4.0.6"
+    "mongoose": "^4.0.6",
     "mongoose-friends": "^0.2.3",
     "morgan": "~1.5.3",
     "multer": "^1.0.1",
