--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mongoose-friends": "^0.2.3",
     "morgan": "~1.5.3",
     "multer": "^1.0.1",
-    "multer-s3": "^1.2.0",
+    "multer-s3": "1.2.1",
     "passport": "^0.2.1",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
